<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Aza Codes (WhatsApp +923030839837) on 3/10/20 12:41 AM
  ~ Copyright (c) 2020. All rights reserved by @Syzigo.
  ~ Last modified 3/10/20 12:41 AM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F2F4F8"
    android:layout_height="match_parent"
    tools:context="com.freevpn.vpnsecurity.indiavpn.ui.HelpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F4F8"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/ic_arrow_back"
                    android:visibility="visible"
                    tools:ignore="ContentDescription"
                    app:tint="#000" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:layout_weight="8.5"
                    android:gravity="center|start"
                    android:text="@string/help"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="60dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginLeft="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/q1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/help_question_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/q1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#000"
        android:id="@+id/a1"
        android:text="@string/help_answer_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a1"
        android:textColor="#000"
        android:id="@+id/q2"
        android:text="@string/help_question_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q2"
        android:id="@+id/a2"
        android:text="@string/help_answer_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a2"
        android:id="@+id/q3"
        android:text="@string/help_question_3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q3"
        android:id="@+id/a3"
        android:text="@string/help_answer_3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a3"
        android:id="@+id/q4"
        android:text="@string/help_question_4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q4"
        android:id="@+id/a4"
        android:text="@string/help_answer_4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a4"
        android:id="@+id/q5"
        android:text="@string/help_question_5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q5"
        android:id="@+id/a5"
        android:text="@string/help_answer_5"/>




</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/help_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:padding="@dimen/margin_16dp"
        style="@style/ThemeNormalWhiteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>